--- a/members.html
+++ b/members.html
@@ -10,7 +10,7 @@
 <body>
   <div class="menu-bar">
   <ul>
-      <li><a href ="home.html"> Home</a></li>
+      <li><a href ="index.html"> Home</a></li>
       <li><a href = "members.html">Members</a></li>
       <li><a href = "resource.html" >Resources</a></li>
       <li><a href = "contacts.html">Contact</a></li>
