--- a/members.html
+++ b/members.html
@@ -17,13 +17,33 @@
   </ul>
 </div>
 <div class="members">
-    <ul>
-        <li><h2>Ajay Kumar (B190490CS) <form action="https://drive.google.com/file/d/1FsyfrVzzDatwz7D6JDeWTzd4JDksCzu2/view?usp=drivesdk"> <button class="cv" type="submit"> Check CV </button> </form> </h2> </li> <br>
-        <li><h2>Prabhat Kumar (B190521CS) <form action="https://drive.google.com/file/d/1nWc10ZTArpODcaGSUTi7SUgpNDoC8OLr/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button></form> </h2> </li> <br>
-        <li><h2>Thapas P Pramod (B190478CS) <form action="https://drive.google.com/file/d/1Pt8JCpUHBUppPT9159egd5O4fYhZTPVh/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button></form> </h2> </li> <br>
-        <li><h2>Subhasish Chintada (B191088CS) <form action="https://drive.google.com/file/d/17x-_e-hTS9l6wRQ91j_NB21BWUrykmZz/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form> </h2> </li>
-    </ul>
-</div>
-
+      <table>
+          <tr>
+              <th>Name</th>
+              <th>Roll No.</th>
+              <th>CV</th>
+          </tr>
+          <tr>
+              <td>Ajay Kumar</td>
+              <td>B190490CS</td>
+              <td><form action="https://drive.google.com/file/d/1FsyfrVzzDatwz7D6JDeWTzd4JDksCzu2/view?usp=drivesdk"> <button class="cv" type="submit"> Check CV </button> </form></td>
+          </tr>
+          <tr>
+              <td>Prabhat Kumar</td>
+              <td>B190521CS</td>
+              <td><form action="https://drive.google.com/file/d/1nWc10ZTArpODcaGSUTi7SUgpNDoC8OLr/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+          </tr>
+          <tr>
+              <td>Thapas P Pramod</td>
+              <td>B190478CS</td>
+              <td><form action="https://drive.google.com/file/d/1Pt8JCpUHBUppPT9159egd5O4fYhZTPVh/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+          </tr>
+          <tr>
+              <td>Subhasish Chintada</td>
+              <td>B191088CS</td>
+              <td><form action="https://drive.google.com/file/d/17x-_e-hTS9l6wRQ91j_NB21BWUrykmZz/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+          </tr>
+      </table>
+  </div>
 </body>
 </html>
