--- a/members.html
+++ b/members.html
@@ -26,22 +26,22 @@
           <tr>
               <td>Ajay Kumar</td>
               <td>B190490CS</td>
-              <td><form action="https://drive.google.com/file/d/1FsyfrVzzDatwz7D6JDeWTzd4JDksCzu2/view?usp=drivesdk"> <button class="cv" type="submit"> Check CV </button> </form></td>
+              <td><form action="Resume/Ajay's Resume.pdf"> <button class="cv" type="submit"> Check CV </button> </form></td>
           </tr>
           <tr>
               <td>Prabhat Kumar</td>
               <td>B190521CS</td>
-              <td><form action="https://drive.google.com/file/d/1nWc10ZTArpODcaGSUTi7SUgpNDoC8OLr/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+              <td><form action="Resume/Prabhat's Resume.pdf"> <button class="cv" type="submit"> Check CV </button> </form></td>
           </tr>
           <tr>
               <td>Thapas P Pramod</td>
               <td>B190478CS</td>
-              <td><form action="https://drive.google.com/file/d/1Pt8JCpUHBUppPT9159egd5O4fYhZTPVh/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+              <td><form action="Resume/Thapas's Resume.pdf"> <button class="cv" type="submit"> Check CV </button> </form></td>
           </tr>
           <tr>
               <td>Subhasish Chintada</td>
               <td>B191088CS</td>
-              <td><form action="https://drive.google.com/file/d/17x-_e-hTS9l6wRQ91j_NB21BWUrykmZz/view?usp=sharing"> <button class="cv" type="submit"> Check CV </button> </form></td>
+              <td><form action="Resume/Subhasish's Resume.pdf"> <button class="cv" type="submit"> Check CV </button> </form></td>
           </tr>
       </table>
   </div>
